--- a/DM01.html
+++ b/DM01.html
@@ -1628,8 +1628,30 @@ Colabで，ファイル→ダウンロード→.ipynbをダウンロードし，
 </ul>
 </div>
 </div>
-<div id="宿題" class="section level2" number="5">
-<h2><span class="header-section-number">5</span> 宿題</h2>
+<div id="生成ai" class="section level2" number="5">
+<h2><span class="header-section-number">5</span> 生成AI</h2>
+<p>使い方（良い例）</p>
+<ol style="list-style-type: decimal">
+<li>教科書や提示された資料だけを使って課題を解く．</li>
+<li>生成AIを使って課題を解いてみる．
+<ul>
+<li>回答が生成される場合
+<ul>
+<li>自分の回答と同じ場合：自分が身に付けるべきことは何かを決める．</li>
+<li>自分の回答と異なる場合：要調査</li>
+</ul></li>
+<li>回答が生成されない場合：プロンプトが悪いのか，生成AIの性能の問題なのかを考える．</li>
+</ul></li>
+<li>次に似た問題を解くときは，面倒な部分を生成AIに任せる．</li>
+</ol>
+<p>使い方（悪い例）</p>
+<ol style="list-style-type: decimal">
+<li>生成AIを使って課題を解いてみる．</li>
+<li>結果をレポートにコピペする．</li>
+</ol>
+</div>
+<div id="宿題" class="section level2" number="6">
+<h2><span class="header-section-number">6</span> 宿題</h2>
 <p>Google Colabのテキストセルでは <span class="math inline">\(\mathrm{\LaTeX}\)</span>
 の数式（の一部）が使える．</p>
 <ul>
