--- a/DM01.html
+++ b/DM01.html
@@ -1597,6 +1597,8 @@ border-radius: 0px;
 <h4><span class="header-section-number">4.1.1</span>
 レポート作成方法</h4>
 <ul>
+<li><a href="https://colab.research.google.com/?hl=ja#create=true">Google
+Colaboratoryの新しいノートブック</a>を使う．（毎回新規作成するわけではない．レポートを提出するまでは，同じノートブックを使う．）</li>
 <li>Google
 Colabで，ファイル→ダウンロード→.ipynbをダウンロードし，ダウンロードした.ipynbファイルを，manabaに提出する（PDFやWordは不可）．</li>
 <li>提出できるファイルは1回のレポートにつき一つだけである．</li>
@@ -1669,23 +1671,27 @@ Colabで，ファイル→ダウンロード→.ipynbをダウンロードし，
 <tbody>
 <tr class="odd">
 <td><span class="math inline">\(\sqrt{x}\)</span></td>
-<td><code>\sqrt{x}</code></td>
+<td><code>$\sqrt{x}$</code></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(\frac{a}{b}\)</span></td>
-<td><code>\frac{a}{b}</code></td>
+<td><code>$\frac{a}{b}$</code></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(\pm\)</span></td>
-<td><code>\pm</code></td>
+<td><code>$\pm$</code></td>
 </tr>
 <tr class="even">
 <td><span class="math inline">\(a_1+\dots+a_n\)</span></td>
-<td><code>a_1+\dots+a_n</code></td>
+<td><code>$a_1+\dots+a_n$</code></td>
 </tr>
 <tr class="odd">
 <td><span class="math inline">\(a_1,\dots,a_n\)</span></td>
-<td><code>a_1,\dots,a_n</code></td>
+<td><code>$a_1,\dots,a_n$</code></td>
+</tr>
+<tr class="even">
+<td><span class="math inline">\(a_{ij}\)</span></td>
+<td><code>$a_{ij}$</code></td>
 </tr>
 </tbody>
 </table>
