--- a/DM02.html
+++ b/DM02.html
@@ -1610,7 +1610,7 @@ y|}=\dfrac{\sum_{i=1}^nx_iy_i}{\sqrt{\sum_{i=1}^nx_i^2}\sqrt{
 \sum_{i=1}^ny_i^2}}\)</span> を求めよ．</p>
 <pre><code>## 0.9834942116155255</code></pre>
 <p><strong>課題</strong>
-<code>df</code>のtest1とtest2のユークリッド距離を求めよ（classは無視する）．</p>
+<code>df</code>のAとBのユークリッド距離を求めよ（classは無視する）．</p>
 <pre><code>## 12.529964086141668</code></pre>
 <p><strong>課題</strong>
 <code>df[[&#39;test1&#39;, &#39;test2&#39;]]</code>の各個体間のユークリッド距離を求めよ（classは無視する）．</p>
