--- a/DM04.html
+++ b/DM04.html
@@ -1624,7 +1624,7 @@ minimize(L, (0, 0))</code></pre>
 <div id="微分" class="section level3" number="2.5">
 <h3><span class="header-section-number">2.5</span> 微分</h3>
 <p><span class="math inline">\(L(a,
-b):=\displaystyle\sum_{i=1}^n(y_i-(ax_i+b))^2&gt;0\)</span>
+b):=\displaystyle\sum_{i=1}^n(y_i-(ax_i+b))^2\ge 0\)</span>
 だから，<span class="math inline">\(L(a, b)\)</span>
 に最小値があるのは明らか。<span class="math inline">\(L(a, b)\)</span>
 が最小になるところでは，<span class="math inline">\(\dfrac{\partial
