--- a/DM06.html
+++ b/DM06.html
@@ -1819,15 +1819,15 @@ data3.head()</code></pre>
 </tr>
 <tr class="even">
 <td>2</td>
-<td><code>temp</code>の2乗</td>
+<td><code>temp</code>と<code>temp</code>の2乗</td>
 </tr>
 <tr class="odd">
-<td>4</td>
+<td>3</td>
 <td><code>year</code>と<code>month</code>（ワンホットエンコーディング）</td>
 </tr>
 <tr class="even">
-<td>5</td>
-<td><code>temp</code>の2乗と，<code>year</code>と<code>month</code>（ワンホットエンコーディング）</td>
+<td>4</td>
+<td><code>temp</code>と<code>temp</code>の2乗と，<code>year</code>と<code>month</code>（ワンホットエンコーディング）</td>
 </tr>
 </tbody>
 </table>
@@ -1920,6 +1920,8 @@ pd.DataFrame(tmp, columns=pf.get_feature_names_out([&#39;年&#39;])).head()</cod
 <p><strong>課題</strong>
 （標準化あり）<code>data5</code>に対して，6次の多項式回帰を行い，<span class="math inline">\(\displaystyle\sqrt{\mathrm{PRESS}/n}\)</span>
 を求めよ。</p>
+<p><strong>課題</strong>
+（時間に余裕がある場合）生成AIで全てをやり直せ．</p>
 </div>
 </div>
 
