--- a/DM01.html
+++ b/DM01.html
@@ -1539,13 +1539,13 @@ border-radius: 0px;
 </tr>
 <tr class="odd">
 <td align="right">5</td>
-<td>線形重回帰分析</td>
-<td>8</td>
+<td>公差検証，パラメータチューニング</td>
+<td>7.5–7.7</td>
 </tr>
 <tr class="even">
 <td align="right">6</td>
-<td>検証，パラメータチューニング</td>
-<td>7.5–7.7</td>
+<td>線形重回帰分析</td>
+<td>8</td>
 </tr>
 <tr class="odd">
 <td align="right">7</td>
@@ -1597,9 +1597,6 @@ border-radius: 0px;
 <h4><span class="header-section-number">4.1.1</span>
 レポート作成方法</h4>
 <ul>
-<li><a href="https://colab.research.google.com/?hl=ja#create=true">Google
-Colaboratoryの新しいノートブック</a>を使う．（毎回新規作成するわけではない．レポートを提出するまでは，同じノートブックを使う．ノートブックはGoogle
-Driveの「マイドライブ/Colab Notebooks」に保存されているはず．）</li>
 <li>Google
 Colabで，ファイル→ダウンロード→.ipynbをダウンロードし，ダウンロードした.ipynbファイルを，manabaに提出する（PDFやWordは不可）．</li>
 <li>提出できるファイルは1回のレポートにつき一つだけである．</li>
