--- a/DM06.html
+++ b/DM06.html
@@ -1780,10 +1780,11 @@ data3.head()</code></pre>
 </tr>
 <tr class="even">
 <td align="center">6</td>
-<td><code>temp</code>と，<code>year</code>と<code>month</code>（ワンホットエンコーディング）</td>
+<td><code>temp</code>と<code>year</code>と<code>month</code>（ワンホットエンコーディング）</td>
 </tr>
 </tbody>
 </table>
+<p>補足：ここでは，ライブラリの使い方に慣れるために，いろんな変数の組み合わせを，一つずつ確認して練習している．とはいえ，変数が多いときにこの調査を行うのはとても大変だから，通常は，「変数選択」という機械的な方法を用いる．詳細は教科書8.5節を参照．</p>
 <p>予測性能が最高なのはどれか，実験する前に予想してみよう．</p>
 <p>パターン1</p>
 <pre><code>## 7.566113543214987 7.730294828739399</code></pre>
