--- a/DM06.html
+++ b/DM06.html
@@ -1818,7 +1818,7 @@ data3.head()</code></pre>
 </tr>
 </tbody>
 </table>
-<p>補足：ここでは，ライブラリの使い方に慣れるために，いろんな変数の組み合わせを，一つずつ確認して練習している．とはいえ，変数が多いときにこの調査を行うのはとても大変だから，通常は，「変数選択」という機械的な方法を用いる．詳細は教科書8.5節を参照．</p>
+<p>補足：ここでは，ライブラリの使い方に慣れるために，いろんな変数の組み合わせを，一つずつ確認して練習している．とはいえ，変数が多いときにこの調査を行うのはとても大変だから，通常は，「変数選択」という機械的な方法を用いる．詳細は教科書8.5節を参照．また，<code>year</code>や<code>month</code>を入力変数とすることを，時系列予測だとみなすなら，交差検証で予測性能を見積もるのは適切ではないのだが，ここでは話を簡単にするために，それについては心配しないこととする．</p>
 <p>予測性能が最高なのはどれか，実験する前に予想してみよう．</p>
 <pre class="python"><code># 共通部分
 X = data3.drop(columns=[&#39;choco&#39;])
