--- a/DM11.html
+++ b/DM11.html
@@ -1488,7 +1488,6 @@ border-radius: 0px;
 Driveの「マイドライブ/Colab
 Notebooks」に保存されているはず．それを開いて再開する．</p>
 <p>結果を提示しているのは，計算が正しいことを確認してもらうためである．結果の形式を完全に同じにする必要はない．</p>
-<pre class="python"><code>!pip install pca | tail -n 1</code></pre>
 <pre class="python"><code>import matplotlib.pyplot as plt
 import numpy as np
 import pandas as pd
@@ -1649,9 +1648,7 @@ np.allclose(A, U @ Sigma @ tV)</code></pre>
      &#39;math&#39;:     [100,  20,   5,  30,  17,  25],
      &#39;science&#39;:  [  0,  20,   5,  25,  16,  23],
      &#39;society&#39;:  [  0,  20,  30,   0,  21,  17]},
-    index=       [&#39;A&#39;, &#39;B&#39;, &#39;C&#39;, &#39;D&#39;, &#39;E&#39;, &#39;F&#39;])
-
-data1.index = data1.index</code></pre>
+    index=       [&#39;A&#39;, &#39;B&#39;, &#39;C&#39;, &#39;D&#39;, &#39;E&#39;, &#39;F&#39;])</code></pre>
 <div id="階層的クラスタ分析" class="section level4" number="1.2.1">
 <h4><span class="header-section-number">1.2.1</span>
 階層的クラスタ分析</h4>
